--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs",
   "version": "1.0.0",
-  "description": "",
+  "description": "To-Do-List",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,5 +14,6 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.3",
     "node-fetch": "^3.2.6"
-  }
+  },
+  "devDependencies": {}
 }
